src/resume/style/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;0,900;1,400;1,600;1,700&display=swap");

* {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif, "Noto Sans TC", sans-serif;
}

.protrait {
  position: relative;
}

.self-protrait-zone {
  display: block;
}

.about-me {
  position: absolute;
  top: 0;
  left: 0;
  font-weight: bold;
  font-size: 180px;
  color: hsl(60, 30%, 96%);
  z-index: 1;
}

.self-protrait {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  margin: auto;
  width: 250px;
  height: 250px;
  border-radius: 50%;
  background: url(../img/protrait.jpg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  z-index: 2;
}

.self-portrait-box {
  position: relative;
  width: 100%;
  height: 500px;
  background: #17a2b8;
}

.tw-name {
  font-size: 40px;
  font-weight: 900;
  color: #054852;
  text-align: center;
}
.en-name {
  color: #ccc;
  display: block;
  font-size: 27px;
}

.sidetation {
  line-height: 40px;
  color: #888;
  margin: 0 0 0 10px;
  text-align: center;
}

.intro-prief {
  display: flex;
  justify-content: center;
}

.intro-prief .En {
  width: 80%;
}

/* 履歷部分 */
.timeline {
  flex: 1;
  position: relative;
  margin: auto; /*置中*/
  /* padding: 40px 0; */
}

.timeline:before {
  /*直接用最外層的div做軸線*/
  content: "";
  position: absolute;
  left: 20px;
  width: 2px;
  height: 90%;
  background: #c5c5c5;
}

.timeline ul {
  margin: 0;
  padding: 0;
}

.timeline ul li {
  list-style: none;
  line-height: normal;
  position: relative;
  /* width: 50%; */
  padding: 20px 40px;
  box-sizing: border-box;
}

.timeline ul li {
  margin-left: 15px;
}

.timeline ul li {
  text-align: left;
}

.timeline ul li:before {
  content: "";
  position: absolute;
  top: 25px;
  left: 0;
  width: 10px;
  height: 10px;
  background: #248796;
  border-radius: 50%;
  box-shadow: 0 0 0 3px #17a2b8;
}

.timeline ul li h3 {
  margin: 0;
  padding: 0;
  font-weight: 600;
  color: #165059;
}

.timeline ul li p {
  margin: 10px 0 0;
  line-height: 1.5;
  letter-spacing: 2px;
  text-align: left;
  padding: 0;
}

.timeline ul li .time h4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
}

.timeline ul li .time {
  width: 120px;
  position: relative;
  top: -15px;
  left: -5px;
  margin: 10px;
  padding: 8px 16px;
  background: #248796;
  color: #fff;
  border-radius: 18px;
  box-shadow: 0 0 0 3px #17a2b8;
}

/* 標題 */
.title {
  font-size: 40px;
  font-weight: 900;
}
.column-title {
  margin: 50px 0;
  text-align: center;
  font-size: 50px;
  display: flex;
  color: #054852;
}

.column-title .title {
  width: 100%;
  font-size: 40px;
}

.copied-email {
  cursor: pointer;
}

#myEmailAddress {
  border: none;
  outline: none;
  width: 100%;
  cursor: pointer;
  font-family: "Montserrat", sans-serif, "Noto Sans TC", sans-serif;
  font-size: 18px;
  line-height: 1.5;
}

#myEmailAddress:focus {
  padding: 5px;
  background: #666666;
  color: #fff;
  border-radius: 5px;
}

@media all and (max-width: 1200px) {
  .tw-name {
    font-size: 30px;
    z-index: 10;
  }
  .en-name {
    font-size: 20px;
    z-index: 10;
  }
  .intro-prief .En {
    width: 90%;
    z-index: 10;
  }
}
@media all and (min-width: 1105px) {
  .timeline:before {
    /*不動*/
    left: 50%;
  }
  .timeline ul li:nth-child(odd) {
    margin-left: 50%;
  }

  .timeline ul li:nth-child(even) {
    text-align: right;
    width: 50%;
  }
  /*  */
  .timeline ul li:before {
    content: "";
    position: absolute;
    width: 10px;
    height: 10px;
    background: rgba(233, 33, 99, 1);
    border-radius: 50%;
    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.2);
  }

  .timeline ul li h3 {
    color: #ab3b3a;
  }

  .timeline ul li:nth-child(odd):before {
    top: 24px;
    left: -4px;
  }

  .timeline ul li:nth-child(even):before {
    top: 24px;
    right: 9px;
    left: auto;
  }

  .timeline ul li:nth-child(odd) .time {
    width: auto;
    position: absolute;
    top: 10px;
    left: -165px;
    margin: 0;
    padding: 8px 16px;
    background: rgba(233, 33, 99, 1);
    color: #fff;
    border-radius: 18px;
    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.3);
  }

  .timeline ul li:nth-child(even) .time {
    width: auto;
    position: absolute;
    top: 10px;
    right: -180px;
    left: auto;
    margin: 0;
    padding: 8px 16px;
    background: rgba(233, 33, 99, 1);
    color: #fff;
    border-radius: 18px;
    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.3);
  }
  /* 
  標題
  .title {
    font-size: 40px;
    font-weight: 900;
  }
  .column-title {
    margin: 50px 0;
    text-align: center;
    font-size: 50px;
    display: flex;
    color: #ab3b3a;
  }

  .column-title .title {
    width: 100%;
    font-size: 40px;
  } */

  /* 內容容器 */
  .wrap {
    padding: 0 150px;
  }
  .resume {
    /* background: url(../img/coast.jpg); */
    background-size: cover;
    background-repeat: no-repeat;
    padding: 1px;
  }

  .ex-resume {
    padding: 1px;
    background: #fff8f8;
    /* background-size: contain;
    background-repeat: no-repeat;
    padding: 1px; */
  }

  .ex-resume .column-title .title {
    color: #ab3b3a;
  }

  .protrait {
    position: relative;
    width: 100%;
    height: 450px;
  }

  .motto {
    flex: 1;
    /* background: #4a593d; */
  }

  .self-portrait-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: transparent;
    flex: 1;
  }

  .self-protrait-zone {
    display: flex;
    flex: 1;
    width: 50%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    /* background: url(../img/wallpaper.jpg); */
  }

  .self-protrait {
    margin-left: 0;
    width: 250px;
    height: 250px;
    border-radius: 50%;
    background: url(../img/protrait.jpg);
    background-repeat: no-repeat;
    background-size: contain;
  }

  .motto {
    position: relative;
  }

  .id-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    width: 50%;
    color: #111111;
  }

  .sidetation {
    line-height: 40px;
    color: #888;
    margin: 0 0 0 10px;
  }
  .about-me {
    position: absolute;
    bottom: 0;
    left: 0;
    font-weight: bold;
    font-size: 200px;
    color: #f8f8f2;
  }
  /* 名字 */
  .tw-name {
    font-size: 40px;
    font-weight: 900;
    color: #666666;
  }

  .en-name {
    display: inline;
    color: #ccc;
  }

  .intro-prief {
    font-size: 18px;
    letter-spacing: 2px;
    line-height: 1.5;
  }

  .intro-prief .En {
    font-size: 15px;
    /* font-weight: bold; */
  }

  .intro-prief .shame-issue {
    color: #ab3b3a;
    font-weight: 600;
    text-decoration: line-through;
  }

  .web-dev {
    font-weight: 600;
    color: #ffc408;
  }

  .education {
  }
  .education .title {
    width: 100%;
    font-size: 40px;
    color: #ab3b3a;
  }

  .education .en-name {
    font-size: 30px;
  }
}

